// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TasksCardsGrid render with minimal props 1`] = `
<Grid
  className="tasks-cards-grid"
  hasGutter={true}
>
  <GridItem
    key="running"
    md={6}
    sm={12}
    xl={3}
  >
    <RunningTasksCard
      className=""
      data={
        Object {
          "last": 0,
          "older": 0,
        }
      }
      isFullHeight={true}
      query={Object {}}
      time="H24"
      updateQuery={[Function]}
    />
  </GridItem>
  <GridItem
    key="paused"
    md={6}
    sm={12}
    xl={3}
  >
    <PausedTasksCard
      className=""
      data={
        Object {
          "last": 0,
          "older": 0,
        }
      }
      isFullHeight={true}
      query={Object {}}
      time="H24"
      updateQuery={[Function]}
    />
  </GridItem>
  <GridItem
    key="stopped"
    md={6}
    sm={12}
    xl={3}
  >
    <StoppedTasksCard
      className=""
      data={
        Object {
          "other": 0,
          "results": Object {
            "error": Object {
              "last": 0,
              "total": 0,
            },
            "success": Object {
              "last": 0,
              "total": 0,
            },
            "warning": Object {
              "last": 0,
              "total": 0,
            },
          },
        }
      }
      isFullHeight={true}
      query={Object {}}
      time="H24"
      updateQuery={[Function]}
    />
  </GridItem>
  <GridItem
    key="scheduled"
    md={6}
    sm={12}
    xl={3}
  >
    <ScheduledTasksCard
      className=""
      data={0}
      isFullHeight={true}
      query={Object {}}
      time="H24"
      updateQuery={[Function]}
    />
  </GridItem>
</Grid>
`;

exports[`TasksCardsGrid render with props 1`] = `
<Grid
  className="tasks-cards-grid"
  hasGutter={true}
>
  <GridItem
    key="running"
    md={6}
    sm={12}
    xl={3}
  >
    <RunningTasksCard
      className=""
      data={
        Object {
          "last": 3,
          "older": 5,
        }
      }
      isFullHeight={true}
      query={
        Object {
          "state": "running",
        }
      }
      time="WEEK"
      updateQuery={[MockFunction]}
    />
  </GridItem>
  <GridItem
    key="paused"
    md={6}
    sm={12}
    xl={3}
  >
    <PausedTasksCard
      className=""
      data={
        Object {
          "last": 3,
          "older": 5,
        }
      }
      isFullHeight={true}
      query={
        Object {
          "state": "running",
        }
      }
      time="WEEK"
      updateQuery={[MockFunction]}
    />
  </GridItem>
  <GridItem
    key="stopped"
    md={6}
    sm={12}
    xl={3}
  >
    <StoppedTasksCard
      className=""
      data={
        Object {
          "error": Object {
            "last": 1,
            "total": 8,
          },
          "success": Object {
            "last": 3,
            "total": 25,
          },
          "warning": Object {
            "last": 2,
            "total": 20,
          },
        }
      }
      isFullHeight={true}
      query={
        Object {
          "state": "running",
        }
      }
      time="WEEK"
      updateQuery={[MockFunction]}
    />
  </GridItem>
  <GridItem
    key="scheduled"
    md={6}
    sm={12}
    xl={3}
  >
    <ScheduledTasksCard
      className=""
      data={1}
      isFullHeight={true}
      query={
        Object {
          "state": "running",
        }
      }
      time="WEEK"
      updateQuery={[MockFunction]}
    />
  </GridItem>
</Grid>
`;
